# dotmage-python

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  crypto.md  getting-started.md  index.md  security-model.md
docs/modules/: async_client.md  client.md  credentials.md  crypto.md  dotenv.md  exceptions.md  http.md  models.md  session.md  settings.md
examples/: README.md  async_usage.py  ci_pull.py  drift_and_diff.py  quickstart.py  rotate.py  team_invite.py  team_join.py
scripts/: linters.sh  tests.sh
src/dotmage/: __init__.py  async_client.py  client.py  dotenv.py  enums.py  exceptions.py  models.py  session.py  settings.py
src/dotmage/core/: __init__.py  diffing.py  rotation.py
src/dotmage/core/api/: __init__.py  spec.py
src/dotmage/core/credentials/: __init__.py  base.py  file.py  memory.py
src/dotmage/core/crypto/: __init__.py  aead.py  blob.py  invitation.py  kdf.py  keys.py  suite.py
src/dotmage/core/http/: __init__.py  client.py  retry.py
tests/: conftest.py  test_async_client.py  test_blob.py  test_client_extra.py  test_client_flows.py  test_client_rotation.py  test_credentials.py  test_crypto_roundtrip.py  test_crypto_vectors.py  test_diffing.py  test_dotenv.py  test_error_mapping.py  test_http_client.py  test_http_retry.py  test_models.py  test_session.py  test_settings.py  test_spec.py
