[project]
name = "dotmage"
version = "0.1.0"
description = "Python SDK for dotMage — a self-hosted, end-to-end encrypted .env secret manager"
authors = [
    {name = "yepIwt", email = "ReetRay@protonmail.com"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
keywords = ["dotmage", "secrets", "env", "e2e", "encryption", "sdk", "vault"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "pydantic (>=2.9,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pynacl (>=1.5,<2.0)",
]

[project.optional-dependencies]
cli = [
    "typer (>=0.12,<1.0)",
]

[project.urls]
Homepage = "https://github.com/dotMage/dotmage-python"
Repository = "https://github.com/dotMage/dotmage-python"
Changelog = "https://github.com/dotMage/dotmage-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy (>=1.20.0,<2.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=8.0,<9.0.0)",
    "pytest-cov (>=6.0,<7.0.0)",
    "pytest-asyncio (>=0.24,<1.0.0)",
    "respx (>=0.22,<1.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "dotmage", from = "src"}]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dotmage"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
addopts = "--cov=dotmage --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=95"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
]

[tool.coverage.run]
branch = true
source = ["dotmage"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
